update  student  unit  tests  and  enable  spring  security